--- a/login_firebase/pubspec.yaml
+++ b/login_firebase/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   firebase_auth: ^0.18.4+1
   firebase_core: ^0.5.3
 
+  # lưu tk khi thoát chương trình
+  shared_preferences: ^0.5.7+3
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
